--- a/options.html
+++ b/options.html
@@ -128,6 +128,6 @@
 		<h3>Storage info</h3>
 		<p>Using sync storage - if you sign into Chrome on more than one computer, your Courses+ settings will sync between them!</p>
 		<p id="storageUsage">Loading usage information...</p>
-		<button class="btn btn-warning">Clear storage</button>
+		<button id="clearStorage" class="btn btn-warning">Clear storage</button>
 	</body>
 </html>
