Fixed Oxygen font and added it to options page

--- a/options.html
+++ b/options.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Courses+ Options</title>
 
+		<link rel="stylesheet" href="scss_gen/fonts.css" />
 		<link rel="stylesheet" href="options.css" />
 
 		<script type="text/javascript" src="js/jquery.js"></script>
@@ -33,8 +34,8 @@
 				</div><!-- /.modal-content -->
 			</div><!-- /.modal-dialog -->
 		</div>
-		<h1>Courses+ Options</h1>
-		<p>You can use this page to set up, change, or disable some features of Courses+.</p>
+		<h1>Courses<strong>Plus</strong> Options</h1>
+		<p>You can use this page to set up, change, or disable some features of Courses<strong>Plus</strong>.</p>
 		<p>If you're signed in to Chrome, your options are synced across computers.</p>
 		<p>Your changes are automatically saved.</p>
 		<h3>Make Courses yours</h3>
