Added more logos

--- a/options.html
+++ b/options.html
@@ -22,9 +22,13 @@
 					<div class="modal-body">
 						<p>Click on a logo to select it!</p>
 						<p>Your changes are automatically saved.</p>
+						<p>Thanks to William Barkoff for the "CoursesPlus" and "DaltonCourses" logos.</p>
 						<div id="logoSelGallery">
 							<div class="selBox logo regular selected" data-selBoxGroup="logo" data-selBoxVal="regular"></div>
 							<div class="selBox logo circle" data-selBoxGroup="logo" data-selBoxVal="circle"></div>
+							<div class="selBox logo coursesbigwordmark" data-selBoxGroup="logo" data-selBoxVal="coursesbigwordmark"></div>
+							<div class="selBox logo coursespluswordmark" data-selBoxGroup="logo" data-selBoxVal="coursespluswordmark"></div>
+							<div class="selBox logo daltoncourseswordmark" data-selBoxGroup="logo" data-selBoxVal="daltoncourseswordmark"></div>
 						</div>
 					</div>
 					<div class="modal-footer">
