Added a "base" abstraction layer

--- a/options.html
+++ b/options.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="scss_gen/fonts.css" />
 		<link rel="stylesheet" href="options.css" />
 
+		<script type="text/javascript" src="js/cpal.chrome.js"></script>
 		<script type="text/javascript" src="js/jquery.js"></script>
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="js/components.js"></script>
