--- a/browsersupport/CoursesPlus.safariextension/etc/options.html
+++ b/browsersupport/CoursesPlus.safariextension/etc/options.html
@@ -3,14 +3,15 @@
 	<head>
 		<title>Courses+ Options</title>
 
-		<link rel="stylesheet" href="scss_gen/fonts.css" />
+		<link rel="stylesheet" href="../scss_gen/fonts.css" />
 		<link rel="stylesheet" href="options.css" />
 
-		<script type="text/javascript" src="js/cpal.chrome.js"></script>
-		<script type="text/javascript" src="js/jquery.js"></script>
-		<script type="text/javascript" src="js/bootstrap.min.js"></script>
-		<script type="text/javascript" src="js/components.js"></script>
-		<script type="text/javascript" src="js/options.js"></script>
+		<script type="text/javascript" src="../js/cpal.js"></script>
+		<script type="text/javascript" src="../js/cpal.chrome.js"></script>
+		<script type="text/javascript" src="../js/jquery.js"></script>
+		<script type="text/javascript" src="../js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="../js/components.js"></script>
+		<script type="text/javascript" src="../js/options.js"></script>
 	</head>
 	<body>
 		<div id="selLogoModal" class="modal fade">
