--- a/etc/options.html
+++ b/etc/options.html
@@ -8,13 +8,13 @@
 
 		<script type="text/javascript" src="../js/cpal.js"></script>
 		<script>
-		var file = "";
-		if (navigator.userAgent.indexOf("Chrome") > -1) {
-			file = "chrome";
-		} else if (navigator.userAgent.indexOf("Safari") > -1) {
-			file = "safari";
-		}
-		document.write('<script type="text/javascript" src="../js/cpal.' + file + '.js"></script>');
+			var file = "";
+			if (navigator.userAgent.indexOf("Chrome") > -1) {
+				file = "chrome";
+			} else if (navigator.userAgent.indexOf("Safari") > -1) {
+				file = "safari";
+			}
+			document.write('<script type="text/javascript" src="../js/cpal.' + file + '.js"></scr' + 'ipt>');
 		</script>
 		<script type="text/javascript" src="../js/jquery.js"></script>
 		<script type="text/javascript" src="../js/bootstrap.min.js"></script>
