--- a/browsersupport/Chrome/etc/coursesnew.html
+++ b/browsersupport/Chrome/etc/coursesnew.html
@@ -3,14 +3,14 @@
 	<head>
 		<title>CoursesNew</title>
 
-		<link href="css/font-awesome.min.css" rel="stylesheet" />
-		<link href="css/simplegrid.css" rel="stylesheet" />
-		<link href="css/coursesnew.css" rel="stylesheet" />
-		<link href="scss_gen/hamburger.css" rel="stylesheet" />
+		<link href="../css/font-awesome.min.css" rel="stylesheet" />
+		<link href="../css/simplegrid.css" rel="stylesheet" />
+		<link href="../css/coursesnew.css" rel="stylesheet" />
+		<link href="../scss_gen/hamburger.css" rel="stylesheet" />
 
-		<script src="js/jquery.js"></script>
-		<script src="js/coursesLib.js"></script>
-		<script src="js/hamburger.js"></script>
+		<script src="../js/jquery.js"></script>
+		<script src="../js/coursesLib.js"></script>
+		<script src="../js/hamburger.js"></script>
 	</head>
 	<body>
 		<noscript>Please enable JavaScript.</noscript>
