--- a/browsersupport/CoursesPlus.safariextension/etc/coursesnew.html
+++ b/browsersupport/CoursesPlus.safariextension/etc/coursesnew.html
@@ -65,10 +65,10 @@
 				</ul>
 			</div>
 			<ul>
-				<!--<li><a href="#">Link 1</a></li>
-				<li><a href="#">Link 2</a></li>
-				<li><a href="#">Link 3</a></li>
-				<li><a href="#">Link 4</a></li>-->
+				<li><a href="#">Class 1</a></li>
+				<li><a href="#">Class 2</a></li>
+				<li><a href="#">Class 3</a></li>
+				<li><a href="#">Class 4</a></li>
 			</ul>
 		</nav>
 	</body>
