--- a/browsersupport/CoursesPlus.safariextension/etc/options.html
+++ b/browsersupport/CoursesPlus.safariextension/etc/options.html
@@ -7,15 +7,7 @@
 		<link rel="stylesheet" href="options.css" />
 
 		<script type="text/javascript" src="../js/cpal.js"></script>
-		<script>
-			var file = "";
-			if (navigator.userAgent.indexOf("Chrome") > -1) {
-				file = "chrome";
-			} else if (navigator.userAgent.indexOf("Safari") > -1) {
-				file = "safari";
-			}
-			document.write('<script type="text/javascript" src="../js/cpal.' + file + '.js"></scr' + 'ipt>');
-		</script>
+		<script type="text/javascript" src="../js/cpalloader.js"></script>
 		<script type="text/javascript" src="../js/jquery.js"></script>
 		<script type="text/javascript" src="../js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="../js/components.js"></script>
