--- a/etc/coursesnew.html
+++ b/etc/coursesnew.html
@@ -59,12 +59,12 @@
 				<img id="username-img" src="" alt="User image" />
 				<span id="username-big">Loading...</span>
 				<br />
-				<ul id="user-actions">
+				<ul id="user-actions" class="happyNavList">
 					<li id="optionsMenuItem">Options</li>
 					<li id="logOutMenuItem">Log out</li>
 				</ul>
 			</div>
-			<ul>
+			<ul class="happyNavList">
 				<li><a href="#">Class 1</a></li>
 				<li><a href="#">Class 2</a></li>
 				<li><a href="#">Class 3</a></li>
