--- a/etc/coursesnew.html
+++ b/etc/coursesnew.html
@@ -18,6 +18,10 @@
 			<div id="loadingPage" class="page showing">
 				<i class="fa fa-4x fa-circle-o-notch fa-spin"></i>
 			</div>
+			<div id="notLoggedInPage" class="page">
+				<h1>You're not logged in!</h1>
+				<h4>Log in on regular Courses and refresh the page to continue.</h4>
+			</div>
 			<div id="mainPage" class="page">
 				<div class="grid grid-pad">
 					<div class="col-1-3">
