Added bootstrap to coursesnew

--- a/browsersupport/Chrome/etc/coursesnew.html
+++ b/browsersupport/Chrome/etc/coursesnew.html
@@ -3,9 +3,9 @@
 	<head>
 		<title>CoursesNew</title>
 
+		<link href="../css/bootstrap.css" rel="stylesheet" />
 		<link href="../css/font-awesome.min.css" rel="stylesheet" />
 		<link href="../css/simplegrid.css" rel="stylesheet" />
-		<link href="../css/coursesnew.css" rel="stylesheet" />
 		<link href="../scss_gen/hamburger.css" rel="stylesheet" />
 
 		<script src="../js/jquery.js"></script>
@@ -54,7 +54,7 @@
 			</div>
 		</div>
 		 
-		<div id="hamburger-icon">
+		<div id="hamburger-icon" class="navbar">
 			<i class="fa fa-bars"></i>
 		</div>
 		 
