--- a/etc/coursesnew.html
+++ b/etc/coursesnew.html
@@ -68,11 +68,12 @@
 					<li id="logOutMenuItem">Log out</li>
 				</ul>
 			</div>
+			<div class="mutedtext">Classes</div>
 			<ul class="happyNavList">
-				<li><a href="#">Class 1</a></li>
-				<li><a href="#">Class 2</a></li>
-				<li><a href="#">Class 3</a></li>
-				<li><a href="#">Class 4</a></li>
+				<li>Class 1</li>
+				<li>Class 2</li>
+				<li>Class 3</li>
+				<li>Class 4</li>
 			</ul>
 		</nav>
 	</body>
