--- a/etc/bg.chrome.html
+++ b/etc/bg.chrome.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<title>Courses+ bg page</title>
-		<script src="js/cpal.js"></script>
-		<script src="js/cpal.chrome.js"></script>
+		<script src="../js/cpal.js"></script>
+		<script src="../js/cpal.chrome.js"></script>
 		<script src="bg.js"></script>
 	</head>
 	<body>
