--- a/browsersupport/CoursesPlus.safariextension/etc/options.html
+++ b/browsersupport/CoursesPlus.safariextension/etc/options.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Courses+ Options</title>
 
+		<link rel="stylesheet" href="../css/simplegrid.css" />
 		<link rel="stylesheet" href="../scss_gen/fonts.css" />
 		<link rel="stylesheet" href="options.css" />
 
@@ -128,7 +129,7 @@
 		<button id="selectLogo" class="btn btn-primary">Select a logo...</button>
 		<h3>Enable or disable features</h3>
 		<div id="features">
-			<ul>
+			<ul class="grid grid-pad">
 
 			</ul>
 		</div>
