--- a/browsersupport/CoursesPlus.safariextension/etc/coursesnew.html
+++ b/browsersupport/CoursesPlus.safariextension/etc/coursesnew.html
@@ -9,6 +9,7 @@
 		<link href="../scss_gen/hamburger.css" rel="stylesheet" />
 
 		<script src="../js/jquery.js"></script>
+		<script src="../js/jquery.history.js"></script>
 		<script src="../js/coursesLib.js"></script>
 		<script src="../js/hamburger.js"></script>
 	</head>
