--- a/browsersupport/Chrome/etc/coursesnew.html
+++ b/browsersupport/Chrome/etc/coursesnew.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>CoursesNew</title>
+		<title>Dalton Courses</title>
 
 		<link href="../css/bootstrap.css" rel="stylesheet" />
 		<link href="../css/font-awesome.min.css" rel="stylesheet" />
