Added list of courses to CoursesNew main page

--- a/browsersupport/Chrome/etc/coursesnew.html
+++ b/browsersupport/Chrome/etc/coursesnew.html
@@ -40,14 +40,8 @@
 					</div>
 					<div class="col-1-3">
 						<div class="content">
-							<h3>Classes</h3>
-							<ul>
-								<li>Class 1</li>
-								<li>Class 2</li>
-								<li>Class 3</li>
-								<li>Class 4</li>
-								<li>Class 5</li>
-								<li>Class 6</li>
+							<h3>Courses</h3>
+							<ul id="courseList">
 							</ul>
 						</div>
 					</div>
