--- a/etc/options.html
+++ b/etc/options.html
@@ -132,6 +132,10 @@
 
 			</ul>
 		</div>
+
+		<h3>Services</h3>
+		<p>Services allow Courses+ to connect Courses with other websites you use every day - from daltonplanner.org to Schedules.</p>
+
 		<h3>Storage info</h3>
 		<p>Using sync storage - if you sign into Chrome on more than one computer, your Courses+ settings will sync between them!</p>
 		<p id="storageUsage">Loading usage information...</p>
