Added services to options page

--- a/etc/options.html
+++ b/etc/options.html
@@ -12,6 +12,7 @@
 		<script type="text/javascript" src="../js/jquery.js"></script>
 		<script type="text/javascript" src="../js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="../js/components.js"></script>
+		<script type="text/javascript" src="../js/services.js"></script>
 		<script type="text/javascript" src="../js/options.js"></script>
 	</head>
 	<body>
@@ -135,6 +136,11 @@
 
 		<h3>Services</h3>
 		<p>Services allow Courses+ to connect Courses with other websites you use every day - from daltonplanner.org to Schedules.</p>
+		<div id="services">
+			<ul class="grid grid-pad">
+
+			</ul>
+		</div>
 
 		<h3>Storage info</h3>
 		<p>Using sync storage - if you sign into Chrome on more than one computer, your Courses+ settings will sync between them!</p>
