Edited the not logged in CoursesNew text.

--- a/etc/coursesnew.html
+++ b/etc/coursesnew.html
@@ -21,7 +21,7 @@
 			</div>
 			<div id="notLoggedInPage" class="page">
 				<h1>You're not logged in!</h1>
-				<h4>Log in on regular Courses and refresh the page to continue.</h4>
+				<h4><strong>Log in on regular Courses and refresh the page to continue.</strong> There will be a sign in page here (eventually)</h4>
 			</div>
 			<div id="mainPage" class="page">
 				<div class="grid grid-pad">
