Changed not signed in text

--- a/etc/coursesnew.html
+++ b/etc/coursesnew.html
@@ -56,7 +56,7 @@
 		<nav style="overflow-x:hidden;overflow-y:auto;">
 			<div id="userinfo">
 				<img id="username-img" src="" alt="User image" />
-				<span id="username-big">Loading...</span>
+				<span id="username-big">Sign In</span>
 				<br />
 				<ul id="user-actions" class="happyNavList">
 					<li id="optionsMenuItem">Options</li>
