Re-enabled services and changed version to 3.0

--- a/etc/options.html
+++ b/etc/options.html
@@ -134,13 +134,13 @@
 			</ul>
 		</div>
 
-		<!--<h3>Services</h3>
+		<h3>Services</h3>
 		<p>Services allow Courses+ to connect Courses with other websites you use every day - from daltonplanner.org to Schedules.</p>
 		<div id="services">
 			<ul class="grid grid-pad">
 
 			</ul>
-		</div>-->
+		</div>
 
 		<h3>Storage info</h3>
 		<p>Using sync storage - if you sign into Chrome on more than one computer, your Courses+ settings will sync between them!</p>
