Changed text language
Now more detailed

--- a/etc/coursesnew.html
+++ b/etc/coursesnew.html
@@ -14,7 +14,7 @@
 		<script src="../js/hamburger.js"></script>
 	</head>
 	<body style="overflow-x:hidden;">
-		<noscript>Please enable JavaScript.</noscript>
+		<noscript>Please enable JavaScript. You can do this in Content Settings.</noscript>
 		<div id="page-content" style="overflow-x:hidden;">
 			<div id="loadingPage" class="page showing">
 				<i class="fa fa-4x fa-circle-o-notch fa-spin"></i>
@@ -63,7 +63,7 @@
 					<li id="logOutMenuItem">Log out</li>
 				</ul>
 			</div>
-			<div class="mutedtext">Classes</div>
+			<div class="mutedtext">Courses</div>
 			<ul id="happySideCourseList" class="happyNavList"></ul>
 		</nav>
 	</body>
