Online Planbook name change

--- a/etc/options.html
+++ b/etc/options.html
@@ -135,7 +135,7 @@
 		</div>
 
 		<h3>Services</h3>
-		<p>Services allow Courses+ to connect Courses with other websites you use every day - from daltonplanner.org to Schedules.</p>
+		<p>Services allow Courses+ to connect Courses with other websites you use every day - from the Online Planbook to Schedules.</p>
 		<div id="services">
 			<ul class="grid grid-pad">
 
