--- a/etc/options.html
+++ b/etc/options.html
@@ -42,8 +42,8 @@
 				</div><!-- /.modal-content -->
 			</div><!-- /.modal-dialog -->
 		</div>
-		<h1>Courses<strong>Plus</strong> Options</h1>
-		<p>You can use this page to set up, change, or disable some features of Courses<strong>Plus</strong>.</p>
+		<h1>Courses+ Options</h1>
+		<p>You can use this page to set up, change, or disable some features of Courses+.</p>
 		<p>If you're signed in to Chrome, your options are synced across computers.</p>
 		<p>Your changes are automatically saved.</p>
 		<h3>Make Courses yours</h3>
