Add privacy info

--- a/etc/options.html
+++ b/etc/options.html
@@ -146,5 +146,9 @@
 		<p>Using sync storage - if you sign into Chrome on more than one computer, your Courses+ settings will sync between them!</p>
 		<p id="storageUsage">Loading usage information...</p>
 		<button id="clearStorage" class="btn btn-warning">Clear storage</button>
+
+		<h3>Privacy</h3>
+		<p>If you have the <strong>Navbar messages</strong> feature enabled, Courses+ will connect to a server so it can retrieve the newest message. When it does this, information about what browser version you have, what version of Courses+ you have, and a random, unique ID is transmitted to the server. No personally-identifying information is sent. To disable this tracking, disable the <strong>Navbar messages</strong> component.</p>
+		<p>Your unique ID is: <strong id="coursesplus-uniqueid">Loading...</strong></p>
 	</body>
 </html>
