Add import/export data

--- a/etc/options.html
+++ b/etc/options.html
@@ -145,6 +145,9 @@
 		<h3>Storage info</h3>
 		<p>Using sync storage - if you sign into Chrome on more than one computer, your Courses+ settings will sync between them!</p>
 		<p id="storageUsage">Loading usage information...</p>
+		<button id="importData" class="btn btn-info">Import data</button>
+		<button id="exportData" class="btn btn-info">Export data</button>
+		<br />
 		<button id="clearStorage" class="btn btn-warning">Clear storage</button>
 
 		<h3>Privacy</h3>
