Added email + prepared service options

--- a/etc/options.html
+++ b/etc/options.html
@@ -141,6 +141,8 @@
 
 			</ul>
 		</div>
+		<h4>Got an idea?</h4>
+		<p>Have an idea for a great new service - or any other feature you'd like to see? Send us an email at <a href="mailto:emails@coursesplus.tk">emails@coursesplus.tk</a>!</p>
 
 		<h3>Storage info</h3>
 		<p>Using sync storage - if you sign into Chrome on more than one computer, your Courses+ settings will sync between them!</p>
