--- a/etc/setup.html
+++ b/etc/setup.html
@@ -57,7 +57,7 @@
 			<p>Thanks for installing Courses+. We think you're awesome.</p>
 			<p>Before you start using it, you can use this setup to customise Courses however you want.</p>
 			<p>Don't care? Close this tab, it's OK!</p>
-			<p>You can always go back to the Settings page.</p>
+			<p>You can always go back to the Settings page. There you can change the exact same settings that are here.</p>
 			<br />
 			<p>Ready? Click the Next button to continue.</p>
 		</section>
