Less aggressive text

--- a/etc/options.html
+++ b/etc/options.html
@@ -81,8 +81,8 @@
 			<img id="backgroundImagePreview" src="../images/nobg.png"/>
 			<form id="bgImgUpl" enctype="multipart/form-data">
 			<br>
-				<div id="uploadingText" style="display:none;">Hold on a second.<br><br>We are processing your image.</div>
-				<div id="connectingText">Hold on a second.<br><br>We are loading your image.</div>
+				<div id="uploadingText" style="display:none;">Please wait...<br /><br />We are uploading your image.</div>
+				<div id="connectingText">Please wait...<br /><br />We are loading the image upload form.</div>
 
 				<input type="hidden" name="submit" id="Submit" style="display:none;" />
 				<input type="file" name="fileToUpload" id="fileToUpload" style="display:none;" />
