--- a/etc/options.html
+++ b/etc/options.html
@@ -6,7 +6,8 @@
 		<link rel="stylesheet" href="../css/simplegrid.css" />
 		<link rel="stylesheet" href="../scss_gen/fonts.css" />
 		<link rel="stylesheet" href="options.css" />
-
+		<link rel="icon" href="../images/icon128.png">
+		
 		<script type="text/javascript" src="../js/cpal.js"></script>
 		<script type="text/javascript" src="../js/cpalloader.js"></script>
 		<script type="text/javascript" src="../js/jquery.js"></script>
