--- a/etc/setup.html
+++ b/etc/setup.html
@@ -3,6 +3,8 @@
 	<head>
 		<title>Courses+ Setup</title>
 		<link rel="stylesheet" href="scss_gen/fonts.css" />
+		<link rel="icon" href="../images/icon128.png">
+		
 		<style>
 			body {
 				padding-top: 100px;
@@ -50,11 +52,11 @@
 	<body>
 		<header>
 			<span class="setupbtn">&larr;</span>
-			Courses+ Setup
+			Courses<stong>Plus</stong> Setup
 		</header>
 		<section>
 			<strong class="introhappything">Hey there!</strong>
-			<p>Thanks for installing Courses+. We think you're awesome.</p>
+			<p>Thanks for installing Courses+. <stong>We think you're awesome.</stong></p>
 			<p>Before you start using it, you can use this setup to customise Courses however you want.</p>
 			<p>Don't care? Close this tab, it's OK!</p>
 			<p>You can always go back to the Settings page. There you can change the exact same settings that are here.</p>
