Added support for 3rd party developers services.

--- a/etc/options.html
+++ b/etc/options.html
@@ -159,7 +159,7 @@
 			</ul>
 		</div>
 		<h4>Got an idea?</h4>
-		<p>Have an idea for a great new service - or any other feature you'd like to see? Send us an email at <a href="mailto:emails@coursesplus.tk">emails@coursesplus.tk</a>!</p>
+		<p>Have an idea for a great new service - or any other feature you'd like to see? Send us an email at <a href="mailto:emails@coursesplus.tk">emails@coursesplus.tk</a>! Do you want to develop services? See <a href="https://trello.com/b/1FJCJDxW">here</a>!</p>
 
 		<h3>Storage info</h3>
 		<p>Using sync storage - if you sign into Chrome on more than one computer, your Courses+ settings will sync between them!</p>
